src/include/jme/jme.h

            int jme_jpl_body_state_order_naif( double jd0, double time_offset, int target_naif, int center_naif, int unit, int order, double *state, char *error );
            int jme_jpl_body_state_split( double jd0, double time_offset, int target_body, int center_body, int unit, double *state, char *error );
            int jme_jpl_body_state_split_naif( double jd0, double time_offset, int target_naif, int center_naif, int unit, double *state, char *error );
            int jme_jpl_body_state_utc( int year, int month, int day, int hour, int minute, double second, int calendar, int target_body, int center_body, int unit, double *state, char *error );
            int jme_jpl_body_state_utc_naif( int year, int month, int day, int hour, int minute, double second, int calendar, int target_naif, int center_naif, int unit, double *state, char *error );
            void jme_jpl_close(void);
            int jme_jpl_constant(const char *name, double *value, char *error);
            int jme_jpl_constant_count(char *error);
            int jme_jpl_constant_index(int index, char *name, unsigned int name_size, double *value, char *error);
            int jme_jpl_constant_string(const char *name, char *value, unsigned int value_size, char *error);
            int jme_jpl_constant_string_vector( const char *name, char *values, unsigned int single_value_size, int value_count, char *error );
            int jme_jpl_constant_vector(const char *name, double *values, int value_count, char *error);
            int jme_jpl_coverage(double *first_time, double *last_time, int *continuous, char *error);
            int jme_jpl_current_file_data( char *path, unsigned int path_size, double *first_time, double *last_time, int *continuous, char *error );
            int jme_jpl_ecliptic_state( double jd_time, int target_body, int center_body, int unit, double *state, char *error );