lib/src/jme_bindings.dart


  late final _jme_jpl_body_state_order_naifPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_body_state_order_naif');
  late final _jme_jpl_body_state_order_naif =
      _jme_jpl_body_state_order_naifPtr.asFunction<
          int Function(double, double, int, int, int, int,
              ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  int jme_jpl_body_state_split(
    double jd0,
    double time_offset,
    int target_body,
    int center_body,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_body_state_split(
      jd0,
      time_offset,
      target_body,
      center_body,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_body_state_splitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_body_state_split');
  late final _jme_jpl_body_state_split =
      _jme_jpl_body_state_splitPtr.asFunction<
          int Function(double, double, int, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_body_state_split_naif(
    double jd0,
    double time_offset,
    int target_naif,
    int center_naif,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_body_state_split_naif(
      jd0,
      time_offset,
      target_naif,
      center_naif,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_body_state_split_naifPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_body_state_split_naif');
  late final _jme_jpl_body_state_split_naif =
      _jme_jpl_body_state_split_naifPtr.asFunction<
          int Function(double, double, int, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_body_state_utc(
    int year,
    int month,
    int day,
    int hour,
    int minute,
    double second,
    int calendar,
    int target_body,
    int center_body,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_body_state_utc(
      year,
      month,
      day,
      hour,
      minute,
      second,
      calendar,
      target_body,
      center_body,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_body_state_utcPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_body_state_utc');
  late final _jme_jpl_body_state_utc = _jme_jpl_body_state_utcPtr.asFunction<
      int Function(int, int, int, int, int, double, int, int, int, int,
          ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  int jme_jpl_body_state_utc_naif(
    int year,
    int month,
    int day,
    int hour,
    int minute,
    double second,
    int calendar,
    int target_naif,
    int center_naif,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_body_state_utc_naif(
      year,
      month,
      day,
      hour,
      minute,
      second,
      calendar,
      target_naif,
      center_naif,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_body_state_utc_naifPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_body_state_utc_naif');
  late final _jme_jpl_body_state_utc_naif =
      _jme_jpl_body_state_utc_naifPtr.asFunction<
          int Function(int, int, int, int, int, double, int, int, int, int,
              ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  void jme_jpl_close() {
    return _jme_jpl_close();
  }

  late final _jme_jpl_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('jme_jpl_close');
  late final _jme_jpl_close = _jme_jpl_closePtr.asFunction<void Function()>();

  int jme_jpl_constant(
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Double> value,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_constant(
      name,
      value,
      error,
    );
  }

  late final _jme_jpl_constantPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_constant');
  late final _jme_jpl_constant = _jme_jpl_constantPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_jpl_constant_count(
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_constant_count(
      error,
    );
  }

  late final _jme_jpl_constant_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'jme_jpl_constant_count');
  late final _jme_jpl_constant_count = _jme_jpl_constant_countPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int jme_jpl_constant_index(
    int index,
    ffi.Pointer<ffi.Char> name,
    int name_size,
    ffi.Pointer<ffi.Double> value,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_constant_index(
      index,
      name,
      name_size,
      value,
      error,
    );
  }

  late final _jme_jpl_constant_indexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.UnsignedInt,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_constant_index');
  late final _jme_jpl_constant_index = _jme_jpl_constant_indexPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_jpl_constant_string(
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> value,
    int value_size,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_constant_string(
      name,
      value,
      value_size,
      error,
    );
  }

  late final _jme_jpl_constant_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.UnsignedInt,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_constant_string');
  late final _jme_jpl_constant_string = _jme_jpl_constant_stringPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int,
          ffi.Pointer<ffi.Char>)>();

  int jme_jpl_constant_string_vector(
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> values,
    int single_value_size,
    int value_count,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_constant_string_vector(
      name,
      values,
      single_value_size,
      value_count,
      error,
    );
  }

  late final _jme_jpl_constant_string_vectorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.UnsignedInt,
              ffi.Int,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_constant_string_vector');
  late final _jme_jpl_constant_string_vector =
      _jme_jpl_constant_string_vectorPtr.asFunction<
          int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_constant_vector(
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Double> values,
    int value_count,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_constant_vector(
      name,
      values,
      value_count,
      error,
    );
  }

  late final _jme_jpl_constant_vectorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Double>,
              ffi.Int, ffi.Pointer<ffi.Char>)>>('jme_jpl_constant_vector');
  late final _jme_jpl_constant_vector = _jme_jpl_constant_vectorPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Double>, int,
          ffi.Pointer<ffi.Char>)>();

  int jme_jpl_coverage(
    ffi.Pointer<ffi.Double> first_time,
    ffi.Pointer<ffi.Double> last_time,
    ffi.Pointer<ffi.Int> continuous,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_coverage(
      first_time,
      last_time,
      continuous,
      error,
    );
  }

  late final _jme_jpl_coveragePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_coverage');
  late final _jme_jpl_coverage = _jme_jpl_coveragePtr.asFunction<
      int Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Char>)>();

  int jme_jpl_current_file_data(
    ffi.Pointer<ffi.Char> path,
    int path_size,
    ffi.Pointer<ffi.Double> first_time,
    ffi.Pointer<ffi.Double> last_time,
    ffi.Pointer<ffi.Int> continuous,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_current_file_data(
      path,
      path_size,
      first_time,
      last_time,
      continuous,
      error,
    );
  }

  late final _jme_jpl_current_file_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.UnsignedInt,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_current_file_data');
  late final _jme_jpl_current_file_data =
      _jme_jpl_current_file_dataPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_ecliptic_state(
    double jd_time,
    int target_body,
    int center_body,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_ecliptic_state(
      jd_time,
      target_body,
      center_body,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_ecliptic_statePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_ecliptic_state');
  late final _jme_jpl_ecliptic_state = _jme_jpl_ecliptic_statePtr.asFunction<
      int Function(double, int, int, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();
